syntax = "proto3";

package greet;

option go_package = "github.com/victorvbello/gonotes/course/grpc/greet/proto";

message GreetRequest {
    string first_name = 1;
    string last_name = 2;
}

message GreetResponse {
    string message = 1;
}

service GreetService {
    rpc Greet (GreetRequest) returns (GreetResponse);
    rpc GreetManyTimes (GreetRequest) returns (stream GreetResponse);
}